2012.11.8 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrinput.c:
	  - Memory leak bug has been fixed. (issue #25) (Thanks to chisj)
	* tests/test_qrinput.c:
	  - Added NUL checks for malloc-related bugs using failmalloc.

2012.10.17 Kentaro FUKUCHI <kentaro@fukuchi.org>
	[3.4]
	* NEWS:
	  - Release note has been written.
	* Version 3.4.1 has been released.

2012.10.15 Kentaro FUKUCHI <kentaro@fukuchi.org>
	[3.4]
	* configure.ac:
	  - HAVE_LIBPTHREAD was not correctly defined in config.h.in.
	* tests/test_configure.sh:
	  - New test script checking autoconf-related scripts has been added.
	* configure.ac, README, NEWS: 
	  - Bumped version to 3.4.1.

2012.10.15 Kentaro FUKUCHI <kentaro@fukuchi.org>
	[3.4]
	* Version 3.4.0 has been released.
	[master]
	* Merged 3.4.0.

2012.10.13 Kentaro FUKUCHI <kentaro@fukuchi.org>
	[3.4]
	* qrencode.h:
	  - Documentation improved.
	  - Copyright year has been updated.
	* Doxyfile:
	  - Rebased on a template from Doxygen 1.7.6.1.

2012.10.09 Kentaro FUKUCHI <kentaro@fukuchi.org>
	[3.4]
	* configure.ac, README, NEWS: 
	  - Bumped version to 3.4.0.
	* qrencode.1.in:
	  - Added SVG option to --type.
	* qrenc.c:
	  - Usage improved.
	  - Inkscape-friendly SVG output.

2012.09.25 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c:
	  - Input validation improved. (Thanks to Yann Droneaud)
	* README:
	  - Contributors list has been updated.
	  - Added a note about autogen.sh.

2012.09.24 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* tests/test_bitstream.c:
	  - Added new test.
	* tests/test_{monkey,qrspec}.c:
	  - Warnings suppressed.

2012.09.22 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c:
	  - Color palette support has been added. Currently PNG and SVG are
	    supported
	* qrencode.1.in:
	  - "--foreground" and "--background" options have been added.

2012.09.19 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* README:
	  - Contributors list has been updated.
	* qrencode.1.in:
	  - Followed Unicode block elements patch.
