@@ -137,5 +137,5 @@ Lennart Poettering (mezcalero)
                       - Improved text art patch
 Yann Droneaud         - Improved input validation patch
 Shigeyuki Hirai, Paul Janssens, wangsai, Gavan Fantom, Matthew Baker, Rob Ryan,
-Fred Steinhaeuser, Terry Burton
+Fred Steinhaeuser, Terry Burton, chisj, vlad417
  - bug report / suggestion
